feat(frontend): Добавлена обновленная верстка страницы

--- a/app/index.html
+++ b/app/index.html
@@ -7,13 +7,127 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Gadget-Bar</title>
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
 </head>
 <body>
 <div class="container">
-    <!----NavBar---->
-    <!----NavBar End---->
+    <!----Contact Block---->
+    <div class="contact-block">
+        <div class="contact-block__time">
+            <ul>
+                <li><p><span><i class="fa fa-map-marker" aria-hidden="true"></i></span>Воронеж</p></li>
+                <li><p><span>img</span>пр.Революции 44</p></li>
+                <li><p><span>img</span>с 10:00 до 20:00</p></li>
+                <li><p><span>img</span>+7 980 544 66 66</p></li>
+                <li><a href="tel:+7 980 544 66 66">Заказать звонок</a></li>
+            </ul>
+        </div>
+        <div class="contact-block__garant">
+            <ul>
+                <li><p><span>img</span>Гарантия</p></li>
+                <li><p><span>img</span>Доставка и оплата</p></li>
+            </ul>
+        </div>
+    </div>
+    <!----Contact Block End---->
 
-    <!-------->
+    <!---Search Block------->
+    <div class="search-block">
+        <div class="search-block__logo">
+            <a href="#">Logotype</a>
+        </div>
+        <div class="search-block__input">
+            <label for="search">
+                <input type="text" id="search" placeholder="Искать товары...">
+            </label>
+        </div>
+        <div class="search-block__social-icons">
+            <ul>
+                <li><a href="#">Instagram</a></li>
+                <li><a href="#">VKontakte</a></li>
+                <li><a href="#">Избранное</a></li>
+                <li><a href="#">Корзина</a></li>
+                <li><a href="#">Мой кабинет</a></li>
+            </ul>
+        </div>
+    </div>
+    <!---Search Block End---->
+
+    <!----Navbar Block---->
+    <div class="navbar-block">
+        <div class="navbar-block__menu">
+            <ul>
+                <li><a href="#"><span>img</span>Смартфоны</a></li>
+                <li><a href="#"><span>img</span>Планшеты</a></li>
+                <li><a href="#"><span>img</span>Умные устройства</a></li>
+                <li><a href="#"><span>img</span>Для дома</a></li>
+                <li><a href="#"><span>img</span>Аудиотехника</a></li>
+                <li><a href="#"><span>img</span>Аксессуары</a></li>
+                <li><a href="#"><span>img</span>Сервис</a></li>
+            </ul>
+        </div>
+    </div>
+    <!----Navbar Block End---->
+
+    <!-----Slider Block------->
+    <div class="slider-block">
+        <div class="slider-block__slide"></div>
+        <div class="slider-block__cart">
+            <div class="slider-block__cart-product">
+                <p>Товар дня</p>
+                <p>Популярное</p>
+                <a href="#">Избранное</a>
+            </div>
+            <div class="slider-block__cart-desc">
+
+            </div>
+        </div>
+    </div>
+    <!-----Slider Block End------->
+
+    <!-------Product Block-------->
+    <div class="category-block">
+        <div class="category-block__box">
+            <div class="category-block__box-image">
+                <img src="" alt="">
+            </div>
+            <p class="category-block__box-desc">Some text</p>
+        </div>
+        <div class="category-block__box">
+            <div class="category-block__box-image">
+                <img src="" alt="">
+            </div>
+            <p class="category-block__box-desc">Some text</p>
+        </div>
+        <div class="category-block__box">
+            <div class="category-block__box-image">
+                <img src="" alt="">
+            </div>
+            <p class="category-block__box-desc">Some text</p>
+        </div>
+        <div class="category-block__box">
+            <div class="category-block__box-image">
+                <img src="" alt="">
+            </div>
+            <p class="category-block__box-desc">Some text</p>
+        </div>
+        <div class="category-block__box">
+            <div class="category-block__box-image">
+                <img src="" alt="">
+            </div>
+            <p class="category-block__box-desc">Some text</p>
+        </div>
+        <div class="category-block__box">
+            <div class="category-block__box-image">
+                <img src="" alt="">
+            </div>
+            <p class="category-block__box-desc">Some text</p>
+        </div>
+    </div>
+    <!-------Product Block End-------->
+
+    <!------New Product Block Slider-------->
+    <!------New Product Block Slider End-------->
 </div>
 <script src="js/index.js"></script>
 </body>
