--- a/app/index.html
+++ b/app/index.html
@@ -6,8 +6,10 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Gadget-Bar</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="css/font-awesome.min.css">
 </head>
 <body>
 <div class="container">
@@ -15,17 +17,72 @@
     <div class="contact-block">
         <div class="contact-block__time">
             <ul>
-                <li><p><span><i class="fa fa-map-marker" aria-hidden="true"></i></span>Воронеж</p></li>
-                <li><p><span>img</span>пр.Революции 44</p></li>
-                <li><p><span>img</span>с 10:00 до 20:00</p></li>
-                <li><p><span>img</span>+7 980 544 66 66</p></li>
-                <li><a href="tel:+7 980 544 66 66">Заказать звонок</a></li>
+                <li>
+                    <a href="#">
+                        <span>
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M12 14C14.206 14 16 12.206 16 10C16 7.794 14.206 6 12 6C9.794 6 8 7.794 8 10C8 12.206 9.794 14 12 14ZM12 8C13.103 8 14 8.897 14 10C14 11.103 13.103 12 12 12C10.897 12 10 11.103 10 10C10 8.897 10.897 8 12 8Z" fill="#1F2933"/>
+                                <path d="M11.4201 21.814C11.5941 21.938 11.7971 22 12.0001 22C12.2031 22 12.4061 21.938 12.5801 21.814C12.8841 21.599 20.0291 16.44 20.0001 10C20.0001 5.589 16.4111 2 12.0001 2C7.58909 2 4.00009 5.589 4.00009 9.995C3.97109 16.44 11.1161 21.599 11.4201 21.814ZM12.0001 4C15.3091 4 18.0001 6.691 18.0001 10.005C18.0211 14.443 13.6121 18.428 12.0001 19.735C10.3891 18.427 5.97909 14.441 6.00009 10C6.00009 6.691 8.69109 4 12.0001 4Z" fill="#1F2933"/>
+                            </svg>
+                        </span>
+                        Воронеж
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <span>
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M21 13.242V20H22V22H2V20H3V13.242C2.38437 12.8311 1.87971 12.2745 1.53082 11.6218C1.18193 10.969 0.999592 10.2402 1 9.5C1 8.673 1.224 7.876 1.633 7.197L4.345 2.5C4.43277 2.34798 4.559 2.22175 4.71102 2.13398C4.86303 2.04621 5.03547 2 5.211 2H18.79C18.9655 2 19.138 2.04621 19.29 2.13398C19.442 2.22175 19.5682 2.34798 19.656 2.5L22.358 7.182C22.9546 8.17287 23.1463 9.35553 22.8934 10.4841C22.6405 11.6127 21.9624 12.6005 21 13.242ZM19 13.972C18.3124 14.0491 17.6163 13.9665 16.9659 13.7307C16.3155 13.4948 15.7283 13.1119 15.25 12.612C14.8302 13.0511 14.3258 13.4005 13.7672 13.6393C13.2086 13.878 12.6075 14.001 12 14.001C11.3927 14.0013 10.7916 13.8786 10.233 13.6402C9.67445 13.4018 9.16996 13.0527 8.75 12.614C8.27163 13.1138 7.68438 13.4964 7.03395 13.7321C6.38353 13.9678 5.68749 14.0503 5 13.973V20H19V13.973V13.972ZM5.789 4L3.356 8.213C3.11958 8.79714 3.11248 9.44903 3.33613 10.0382C3.55978 10.6273 3.99768 11.1103 4.56218 11.3904C5.12669 11.6705 5.77615 11.7271 6.38058 11.5488C6.98502 11.3706 7.49984 10.9706 7.822 10.429C8.157 9.592 9.342 9.592 9.678 10.429C9.8633 10.8934 10.1836 11.2916 10.5975 11.5721C11.0115 11.8526 11.5 12.0025 12 12.0025C12.5 12.0025 12.9886 11.8526 13.4025 11.5721C13.8164 11.2916 14.1367 10.8934 14.322 10.429C14.657 9.592 15.842 9.592 16.178 10.429C16.3078 10.7484 16.5022 11.0376 16.7491 11.2783C16.996 11.519 17.2901 11.706 17.6127 11.8275C17.9354 11.9491 18.2797 12.0026 18.6241 11.9847C18.9684 11.9668 19.3053 11.8778 19.6136 11.7234C19.9219 11.569 20.1949 11.3525 20.4155 11.0875C20.6361 10.8225 20.7995 10.5148 20.8955 10.1836C20.9914 9.85238 21.0178 9.50493 20.973 9.16305C20.9281 8.82118 20.8131 8.49227 20.635 8.197L18.21 4H5.79H5.789Z" fill="#1F2933"/>
+                            </svg>
+                        </span>
+                        пр.Революции 44
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <span>
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M12 22C6.477 22 2 17.523 2 12C2 6.477 6.477 2 12 2C17.523 2 22 6.477 22 12C22 17.523 17.523 22 12 22ZM12 20C14.1217 20 16.1566 19.1571 17.6569 17.6569C19.1571 16.1566 20 14.1217 20 12C20 9.87827 19.1571 7.84344 17.6569 6.34315C16.1566 4.84285 14.1217 4 12 4C9.87827 4 7.84344 4.84285 6.34315 6.34315C4.84285 7.84344 4 9.87827 4 12C4 14.1217 4.84285 16.1566 6.34315 17.6569C7.84344 19.1571 9.87827 20 12 20ZM13 12H17V14H11V7H13V12Z" fill="#1F2933"/>
+                            </svg>
+                        </span>
+                        с 10:00 до 20:00
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <span>
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M9.366 10.682C10.3043 12.3305 11.6695 13.6957 13.318 14.634L14.202 13.396C14.3442 13.1969 14.5543 13.0569 14.7928 13.0023C15.0313 12.9478 15.2814 12.9825 15.496 13.1C16.9103 13.8729 18.4722 14.3378 20.079 14.464C20.3298 14.4839 20.5638 14.5975 20.7345 14.7823C20.9052 14.9671 21 15.2094 21 15.461V19.923C21.0001 20.1706 20.9083 20.4094 20.7424 20.5932C20.5765 20.777 20.3483 20.8927 20.102 20.918C19.572 20.973 19.038 21 18.5 21C9.94 21 3 14.06 3 5.5C3 4.962 3.027 4.428 3.082 3.898C3.10725 3.6517 3.22298 3.42352 3.40679 3.25763C3.5906 3.09175 3.82941 2.99995 4.077 3H8.539C8.79056 2.99997 9.0329 3.09475 9.21768 3.26545C9.40247 3.43615 9.51613 3.67022 9.536 3.921C9.66222 5.52779 10.1271 7.08968 10.9 8.504C11.0175 8.71856 11.0522 8.96874 10.9977 9.2072C10.9431 9.44565 10.8031 9.65584 10.604 9.798L9.366 10.682ZM6.844 10.025L8.744 8.668C8.20478 7.50409 7.83535 6.26884 7.647 5H5.01C5.004 5.166 5.001 5.333 5.001 5.5C5 12.956 11.044 19 18.5 19C18.667 19 18.834 18.997 19 18.99V16.353C17.7312 16.1646 16.4959 15.7952 15.332 15.256L13.975 17.156C13.4287 16.9437 12.898 16.6931 12.387 16.406L12.329 16.373C10.3676 15.2567 8.74328 13.6324 7.627 11.671L7.594 11.613C7.30691 11.102 7.05628 10.5713 6.844 10.025Z" fill="#1F2933"/>
+                            </svg>
+                        </span>
+                        +7 980 544 66 66
+                    </a>
+                </li>
+                <li><a href="tel:+7 980 544 66 66" class="call-link">Заказать звонок</a></li>
             </ul>
         </div>
         <div class="contact-block__garant">
             <ul>
-                <li><p><span>img</span>Гарантия</p></li>
-                <li><p><span>img</span>Доставка и оплата</p></li>
+                <li>
+                    <a href="#">
+                    <span>
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M17 15.245V22.117C17 22.2055 16.9766 22.2924 16.932 22.3688C16.8875 22.4452 16.8235 22.5085 16.7465 22.5521C16.6696 22.5957 16.5824 22.6181 16.4939 22.6171C16.4055 22.616 16.3189 22.5915 16.243 22.546L12 20L7.757 22.546C7.68104 22.5915 7.59436 22.616 7.50581 22.6171C7.41727 22.6181 7.33004 22.5956 7.25304 22.5519C7.17605 22.5081 7.11205 22.4447 7.06759 22.3682C7.02313 22.2916 6.9998 22.2046 7 22.116V15.246C5.70615 14.2101 4.76599 12.7979 4.30946 11.2045C3.85293 9.6112 3.90256 7.91539 4.45149 6.35148C5.00043 4.78756 6.02156 3.43275 7.37378 2.47428C8.726 1.51581 10.3425 1.00101 12 1.00101C13.6575 1.00101 15.274 1.51581 16.6262 2.47428C17.9784 3.43275 18.9996 4.78756 19.5485 6.35148C20.0974 7.91539 20.1471 9.6112 19.6905 11.2045C19.234 12.7979 18.2939 14.2101 17 15.246V15.245ZM9 16.418V19.468L12 17.668L15 19.468V16.418C14.0468 16.8035 13.0282 17.0011 12 17C10.9718 17.0011 9.95316 16.8035 9 16.418ZM12 15C13.5913 15 15.1174 14.3679 16.2426 13.2426C17.3679 12.1174 18 10.5913 18 9.00001C18 7.40871 17.3679 5.88258 16.2426 4.75736C15.1174 3.63215 13.5913 3.00001 12 3.00001C10.4087 3.00001 8.88258 3.63215 7.75736 4.75736C6.63214 5.88258 6 7.40871 6 9.00001C6 10.5913 6.63214 12.1174 7.75736 13.2426C8.88258 14.3679 10.4087 15 12 15Z" fill="#1F2933"/>
+                        </svg>
+                    </span>
+                        Гарантия
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <span>
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M21.993 7.95C21.99 7.878 21.983 7.805 21.964 7.736C21.957 7.711 21.943 7.687 21.934 7.662C21.913 7.605 21.894 7.549 21.864 7.497C21.848 7.47 21.826 7.448 21.807 7.422C21.775 7.377 21.744 7.331 21.705 7.292C21.682 7.27 21.652 7.252 21.627 7.231C21.588 7.199 21.552 7.164 21.507 7.137C21.503 7.134 21.498 7.134 21.493 7.131C21.49 7.129 21.488 7.127 21.485 7.125L12.506 2.135C12.205 1.967 11.839 1.968 11.536 2.134L2.515 7.124C2.512 7.127 2.509 7.131 2.504 7.134C2.501 7.135 2.497 7.136 2.494 7.138C2.459 7.158 2.433 7.187 2.4 7.211C2.364 7.238 2.326 7.262 2.294 7.293C2.264 7.324 2.241 7.36 2.215 7.395C2.188 7.43 2.158 7.461 2.136 7.499C2.11 7.542 2.096 7.591 2.077 7.638C2.063 7.671 2.045 7.702 2.036 7.738C2.017 7.805 2.011 7.877 2.007 7.948C2.006 7.965 2 7.98 2 7.998V7.999V8V16C2 16.363 2.197 16.698 2.515 16.874L11.493 21.861L11.494 21.862C11.495 21.862 11.495 21.862 11.496 21.863L11.516 21.874C11.559 21.898 11.606 21.911 11.651 21.928C11.683 21.941 11.714 21.958 11.748 21.967C11.829 21.988 11.915 22 12 22C12.085 22 12.171 21.988 12.254 21.967C12.287 21.958 12.318 21.941 12.351 21.928C12.396 21.911 12.443 21.899 12.486 21.874L12.506 21.863C12.507 21.862 12.507 21.862 12.508 21.862L12.509 21.861L21.487 16.874C21.803 16.698 22 16.363 22 16V8V7.999V7.998C22 7.981 21.994 7.967 21.993 7.95ZM11.972 11.872L5.058 8.005L7.82 6.477L14.654 10.382L11.972 11.872ZM12.02 4.153L18.941 8L16.697 9.247L9.867 5.344L12.02 4.153ZM4 9.705L11 13.621V19.301L4 15.411V9.705ZM13 19.301L13.002 13.622L16 11.944V15L18 14V10.825L20 9.706V15.411L13 19.301Z" fill="#1F2933"/>
+                            </svg>
+                        </span>
+                        Доставка и оплата
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
@@ -38,7 +95,7 @@
         </div>
         <div class="search-block__input">
             <label for="search">
-                <input type="text" id="search" placeholder="Искать товары...">
+                <input type="text" id="search" placeholder="Искать товары..." autocomplete="off">
             </label>
         </div>
         <div class="search-block__social-icons">
@@ -128,6 +185,10 @@
 
     <!------New Product Block Slider-------->
     <!------New Product Block Slider End-------->
+
+    <!----Modal---->
+
+    <!----Modal End---->
 </div>
 <script src="js/index.js"></script>
 </body>
